--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,9 @@ mkdocstrings = {extras = ["python"], version = "^0.23.0"}
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.poetry.scripts]
+grob = "grob.cli:main"
+
 [tool.mypy]
 files = ["grob"]
 disallow_untyped_defs = "True"
