--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ deptry = "^0.12.0"
 mypy = "^1.5.1"
 pre-commit = "^3.4.0"
 tox = "^4.11.1"
+pytest-cov = "^4.0.0"
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.4.2"
